# NBA-Predictions

./: README.md  index.html  pyproject.toml  requirements.txt  server.js
backend/: __init__.py  advanced_math.py  aggregator.py  analysis.py  api_server.py  backtest.py  categorizer.py  cli_dashboard.py  clutch_analysis.py  config.py  enrich.py  history.py  http_util.py  injury_impact.py  lineup_analyzer.py  live.py  model.py  momentum_composite.py  odds_compare.py  pipeline.py  player_stats.py  run.py  sentiment.py  simulation.py  streaks.py  tests.py  tests_advanced.py  tests_v2.py  tui.py
backend/sources/: __init__.py  action_network.py  balldontlie.py  base.py  basketball_reference.py  cbssports_nba.py  espn.py  flashscore.py  google_news.py  nba_cdn.py  nba_stats.py  nba_stats_v2.py  odds_api_free.py  oddsportal.py  pbpstats.py  reddit.py  rotowire.py  sofascore.py  teamrankings.py  thescore.py
data/: fixture_pbp.json  history.jsonl  live.json  results_sample.json  snapshot.json
